fixing centering on smaller screens

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -284,7 +284,7 @@ p.self-description {
     width: 100%;
   }
   .right-panel {
-    margin: 0 1.5em;
+    margin: 0 auto;
   }
   .section-break {
     width: 70%;
