--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -348,7 +348,7 @@ p.self-description {
   }
 
   .right-panel {
-    margin: 0 1.5em;
+    margin: 0 auto;
   }
 
   .section-break {
